--- a/0630/css/main.css
+++ b/0630/css/main.css
@@ -24,6 +24,7 @@ body {
 header {
     height: 90px;
     position: relative;
+
 }
 
 #logo {
@@ -56,6 +57,39 @@ nav ul a {
     text-decoration: none;
 }
 
+#menuBtn {
+    /* border: 1px solid white; */
+    position: fixed;
+    top: 40px;
+    right: 30px;
+    z-index: 110;
+    width: 40px;
+    height: 30px;
+    display: block;
+}
+
+#menuBtn div {
+    background-color: white;
+    height: 5px;
+    margin: 8px;
+    transition: 0.5s;
+
+}
+
+/* 漢堡按鈕的叉叉 */
+#menuBtn.closeBtn div:nth-of-type(1) {
+    transform: translate(0, 13px) rotate(405deg);
+}
+
+#menuBtn.closeBtn div:nth-of-type(3) {
+    transform: translate(0, -13px) rotate(-405deg);
+}
+
+#menuBtn.closeBtn div:nth-of-type(2) {
+    /* scale縮放  */
+    transform: scaleY(0);
+}
+
 #mainnav {
     /* 主選單 */
     position: absolute;
@@ -82,44 +116,46 @@ nav ul a {
     /* 所以做在a上 */
 }
 
-#mainnav>ul>li:hover ul {
-    /* 當滑到主選單標題時顯示選單內容 */
-    /* 注意這裡不是設定在a上面，而是li */
-    /* 否則鼠標一離開a選單內容就會消失 */
-    display: block;
-}
+/* #mainnav>ul>li:hover ul { */
+/* 當滑到主選單標題時顯示選單內容 */
+/* 注意這裡不是設定在a上面，而是li */
+/* 否則鼠標一離開a選單內容就會消失 */
+/* display: block; */
+/* } */
 
-#mainnav ul li a { /* 所有的a */
+#mainnav ul li a {
+    /* 所有的a */
     /* 影響ul li a以下所有內容 */
     display: block;
     text-align: center;
     color: rgb(0, 56, 0);
-   
+
 }
 
-#mainnav>ul>li>a{ /* 第一層的ａ */
+#mainnav>ul>li>a {
+    /* 第一層的ａ */
     /* 增加主選單標題與選單內容之間的距離 */
     /* 調整padding後再去#mainnav把整個選單位置往上調 */
     padding: 10px;
 
 }
 
-#mainnav>ul>li>a:hover{
+#mainnav>ul>li>a:hover {
     /* 滑到主選單標題時做漸層效果 */
-    background-image: radial-gradient(at center bottom,rgba(255, 255, 255, 0.483),rgba(255, 255, 255, 0)60%);
+    background-image: radial-gradient(at center bottom, rgba(255, 255, 255, 0.483), rgba(255, 255, 255, 0)60%);
 }
 
 #mainnav ul ul {
     /* 主選單內容區塊 */
     background-color: rgba(255, 255, 255, 0.357);
     padding: 10px;
-    display: none;
+    /* display: none; */
 }
 
 #mainnav ul ul li {
     /* 主選單內容區塊的列表區塊 */
     margin: 10px;
-    
+
 }
 
 #mainnav>ul>li>a {
@@ -128,6 +164,8 @@ nav ul a {
     /* 只讓主選單標題改成襯線字，以下的選單內容不影響 */
     font-family: 'Noto Serif TsC', serif;
     font-weight: 600;
+
+
 }
 
 #mainnav ul ul li a {
@@ -136,15 +174,97 @@ nav ul a {
     font-size: 0.9em;
     font-weight: 400;
     color: rgb(255, 255, 255);
-    padding: 5px;
+    /* 下面hover的地方少1px可避免滑到時選單跳動 */
+    padding-bottom: 6px;
     /* border-bottom: 1px solid green; */
-    
+
 }
 
-#mainnav ul ul li a:hover{
+#mainnav ul ul li a:hover {
     border-bottom: 1px solid green;
+    padding-bottom: 5px;
 }
 
+
+#mainnav>ul>li>a::before {
+    content: "";
+    background-image: url(../img/mainIcon.png);
+    /* block一定會佔一個空間，所以會把選單向下推移，不會在同一行 */
+    /* 但inline又不能控制寬高，因此使用：inline-block讓兩者兼具 */
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    /* border: solid red; */
+    overflow: hidden;
+    /* inline的話,marging上、下會無效 */
+    /* 所以使用position */
+    position: relative;
+    top: 5px;
+    margin-right: 10px;
+    transition: .5s;
+
+}
+
+#mainnav>ul>li:nth-of-type(2)>a::before {
+    /* (x,y) */
+    background-position: -16px 0;
+}
+
+#mainnav>ul>li:nth-of-type(3)>a::before {
+    /* (x,y) */
+    background-position: -32px 0;
+}
+
+#mainnav>ul>li:nth-of-type(4)>a::before {
+    /* (x,y) */
+    background-position: -48px 0;
+
+}
+
+#mainnav>ul>li:nth-of-type(5)>a::before {
+    /* (x,y) */
+    background-position: -64px 0;
+
+}
+
+#mainnav>ul>li:nth-of-type(6)>a::before {
+    /* (x,y) */
+    background-position: -80px 0;
+
+}
+
+
+#mainnav>ul>li:nth-of-type(1)>a:hover::before {
+    /* (x,y) */
+    background-position: 0 -16px;
+}
+
+
+#mainnav>ul>li:nth-of-type(2)>a:hover::before {
+    /* (x,y) */
+    background-position: -16px -16px;
+}
+
+#mainnav>ul>li:nth-of-type(3)>a:hover::before {
+    /* (x,y) */
+    background-position: -32px -16px;
+}
+
+#mainnav>ul>li:nth-of-type(4)>a:hover::before {
+    /* (x,y) */
+    background-position: -48px -16px;
+}
+
+
+#mainnav>ul>li:nth-of-type(5)>a:hover::before {
+    /* (x,y) */
+    background-position: -64px -16px;
+}
+
+#mainnav>ul>li:nth-of-type(6)>a:hover::before {
+    /* (x,y) */
+    background-position: -80px -16px;
+}
 
 /* #mainnav ul { */
 /* 把表單的豆豆隱藏 */
@@ -194,15 +314,53 @@ nav ul a {
 
 #memnav ul li a {
     /* 把連結的底線拿掉 */
-    text-decoration: none;
+    /* text-decoration: none; */
     color: rgb(0, 119, 204);
 
     /* 這裡要特別注意，如果tac做在ul li裡 */
     /* 則只是把<a>排列置中在li裡，滑鼠滑到<a>文字外的按鈕區域會無反應 */
-    display: block;
-    text-align: center;
+    /* display: block; */
+    /* text-align: center; */
     /* background-color: rgb(15, 84, 84); */
     font-size: 0.95em;
+    font-weight: 400;
+    /* border: 1px solid red; */
+    padding-left: 20px;
+    position: relative;
+    display: block;
+    overflow: hidden;
+}
+
+#memnav ul a i:first-of-type {
+    position: absolute;
+    top: 4px;
+    left: 0;
+    transition: 0.5s;
+
+
+}
+
+/* #memnav ul a i{
+left: 10px;
+} */
+
+#memnav ul li a:hover i:first-of-type {
+    /* 當滑到副選單a時，藍色logo往上跑17px */
+    top: -17px;
+
+
+}
+
+#memnav ul a i:last-of-type {
+    color: yellow;
+    position: absolute;
+    left: 0;
+    top: 25px;
+    transition: 1s;
+}
+
+#memnav ul li a:hover i:last-of-type {
+    top: 4px;
 }
 
 /* #banner{ */
@@ -233,7 +391,7 @@ main {
     /* 放射狀漸層 */
     /* 方向如果是從中下則circle at center bottom */
     /* 如未加circle則是非正圓放射狀 */
-    background-image: radial-gradient(circle at left top, red, yellow, green, blue 80%);
+    /* background-image: radial-gradient(circle at left top, red, yellow, green, blue 80%); */
 }
 
 footer {
@@ -271,6 +429,26 @@ footer {
     border-right: 3px double green;
     /* 增加綠色邊線高度的做法，增加這塊的padding */
     padding: 20px 0;
+    position: relative;
+}
+
+.footeritem h2 i {
+    font-size: 80px;
+    color: aliceblue;
+    /* absolute是以父層為定位點 */
+    /* 所以要往上一層.footeritem設定:position: relative; */
+    /* 否則會跑到網頁的最左上角 */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    /* border: 1px solid royalblue; */
+
+    transform: translate(-50%, -50%);
+    opacity: 50%;
+    z-index: -1;
+
+
+
 }
 
 .item2 {
@@ -316,5 +494,88 @@ footer {
     background-color: yellow;
     display: block;
     margin-top: 20px;
-
 }
+
+
+/* RWD設定 */
+/* @media(條件){
+    CSS
+} */
+
+/* 手機 */
+@media (max-width:660px) {
+
+
+    #mainnav>ul {
+        margin-top: 100px;
+        display: block;
+    }
+
+    #mainnav>ul>li>a {
+
+        color: white;
+    }
+
+    #mainnav {
+
+        /* 以視窗做固定定位 */
+        position: fixed;
+        top: 0;
+        left: 0;
+
+        z-index: 100;
+        background-color: rgba(0, 0, 0, 0.518);
+        width: 100%;
+        height: 100%;
+    }
+
+    /* 原本是display flex橫向排列，設定回display: block直向*/
+    #footerlist {
+        display: block;
+    }
+
+    .footeritem {
+        border-bottom: 1px dashed green;
+        border-right: none;
+        margin: 0 100px;
+
+    }
+}
+
+
+
+
+
+/* 平板 */
+@media(max-width:960px) and (min-width:661px) {
+    header {
+        height: 150px;
+    }
+
+    #mainnav {
+        width: 100%;
+        top: 110px;
+    }
+
+    #logo {
+        top: 20px;
+    }
+
+    /* #banner {
+        position: relative;
+        top: 280px;
+    } */
+}
+
+
+/* 桌機 */
+/* @media (min-width:769px) and (max-width:1366px){
+    footer{background-color: orange;}
+    
+} */
+/* 大於桌機 */
+/* 必須要設，否則如果是環型螢幕會左右延伸難以識讀 */
+/* @media (min-width:1367px){
+    footer{background-color: blue;}
+    
+} */
